[back]feature: add field feedback to a record
